syntax = "proto3";

option csharp_namespace = "Users.Core";

package storage;

service Storage {
	rpc SaveMediaFiles(stream SaveMediaFilesRequest) returns (SaveMediaFilesResponse);
	rpc GetUserCurrentAvatarData(GetUserCurrentAvatarDataRequest) returns (GetUserCurrentAvatarDataResponse);
}

message SaveMediaFilesRequest {
	bytes fileBytes = 1;
	int32 categoryId = 2;
	string extension = 3;
	int32 userId = 4;
}

message SaveMediaFilesResponse {
	bool isSuccess = 1;
	string message = 2;
}

message GetUserCurrentAvatarDataRequest {
	int32 userId = 1;
}

message GetUserCurrentAvatarDataResponse {
	bytes avatarBytes = 1;
	string extension = 2;
}